--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
+    "emotion": "^10.0.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-emotion": "^9.1.3",
+    "react-icons": "^3.7.0",
+    "react-router-dom": "^5.0.1",
+    "react-router-last-location": "^2.0.0",
+    "react-scripts": "3.0.1",
+    "react-spring": "^8.0.27",
+    "react-text-truncate": "^0.14.1",
+    "react-transition-group": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp _redirects build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -27,5 +36,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-kyt": "^0.5.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-flowtype": "^3.10.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jest": "^22.6.4",
+    "eslint-plugin-json": "^1.2.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-unicorn": "^9.0.0",
+    "flow-bin": "^0.102.0",
+    "flow-typed": "^2.5.2",
+    "prettier": "^1.18.2"
   }
 }
