--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "3.0.1",
     "react-spring": "^8.0.27",
     "react-text-truncate": "^0.14.1",
-    "react-transition-group": "^4.2.1"
+    "react-transition-group": "^4.2.1",
+    "use-react-router": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
