--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@iconscout/react-unicons": "^0.0.1",
     "@reach/router": "^1.2.1",
     "emotion": "^10.0.9",
+    "framer-motion": "^1.2.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-emotion": "^9.1.3",
