--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "@reach/router": "^1.2.1",
     "emotion": "^10.0.9",
     "framer-motion": "^1.2.4",
+    "javascript-time-ago": "^2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-emotion": "^9.1.3",
     "react-icons": "^3.7.0",
+    "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
     "react-router-last-location": "^2.0.0",
     "react-scripts": "3.0.1",
     "react-spring": "^8.0.27",
     "react-text-truncate": "^0.14.1",
+    "react-time-ago": "^5.0.7",
     "react-transition-group": "^4.2.1",
     "use-react-router": "^1.0.7"
   },
