--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "emotion": "^10.0.9",
     "framer-motion": "^1.2.4",
     "javascript-time-ago": "^2.0.2",
+    "polished": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-emotion": "^9.1.3",
     "react-icons": "^3.7.0",
     "react-markdown": "^4.2.2",
+    "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^5.1.2",
     "react-router-last-location": "^2.0.0",
     "react-scripts": "3.0.1",
